@@ -1,4 +1,4 @@
-$Id: NEWS,v 1.818 2007-05-21 14:39:31 castaglia Exp $
+$Id: NEWS,v 1.819 2007-05-21 16:04:46 castaglia Exp $
 
 -----------------------------------------------------------------------------
   More details on the bugs listed below can be found by using the bug number
@@ -37,6 +37,9 @@ CVS
 - Bug 2920 - ABOR command not handled during data transfer.
 - Bug 2924 - DeleteAbortedStores doesn't work when the ABOR command is used.
 - Bug 2890 - SystemLog permission errors on SIGHUP when mod_tls is enabled.
+- Bug 2932 - Syslog contains "error setting IPV6_V6ONLY: Protocol not
+  available".  Check the IPV6_V6ONLY socket option first, and only attempt
+  to disable it if needed.  Also use the IPPROTO_IPV6 socket level.
 
 1.3.1rc2 - Released 12-Jan-2007
 --------------------------------
